# serializer version: 1
# name: test_light[rgb][light.test_controller-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGB: 'rgb'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.test_controller',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'trimlight',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '544c0003a1b2c3d4e5f6',
    'unit_of_measurement': None,
  })
# ---
# name: test_light[rgb][light.test_controller-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 128,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.RGB: 'rgb'>,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test controller',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
        210.0,
        66.667,
      ),
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
        10,
        20,
        30,
      ),
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGB: 'rgb'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
        0.211,
        0.25,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.test_controller',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_light[rgbw][light.test_controller-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGBW: 'rgbw'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.test_controller',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'trimlight',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '544c0003a1b2c3d4e5f6',
    'unit_of_measurement': None,
  })
# ---
# name: test_light[rgbw][light.test_controller-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 128,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.RGBW: 'rgbw'>,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test controller',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
        212.727,
        27.5,
      ),
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
        29,
        34,
        40,
      ),
      <LightEntityStateAttribute.RGBW_COLOR: 'rgbw_color'>: tuple(
        10,
        20,
        30,
        40,
      ),
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGBW: 'rgbw'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
        0.274,
        0.296,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.test_controller',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_light[rgbww][light.test_controller-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGBWW: 'rgbww'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.test_controller',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'trimlight',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '544c0003a1b2c3d4e5f6',
    'unit_of_measurement': None,
  })
# ---
# name: test_light[rgbww][light.test_controller-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 128,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.RGBWW: 'rgbww'>,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test controller',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
        15.0,
        8.0,
      ),
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
        50,
        47,
        46,
      ),
      <LightEntityStateAttribute.RGBWW_COLOR: 'rgbww_color'>: tuple(
        10,
        20,
        30,
        50,
        40,
      ),
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGBWW: 'rgbww'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
        0.34,
        0.332,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.test_controller',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
